Run the deploy-time front-end build on npm and finish the Java 17 cleanups
Replace the yarn-driven front-end install with npm in the deployment
resource copier: the install command is now "npm ci", the copier keeps
package-lock.json in the temp folder instead of yarn.lock, and the bean
property, its accessors and the surrounding documentation are named for
npm. The Spring definition of the copier is updated to match, so the
deployed application installs from the committed npm lockfile.

Re-point the six front-end asset paths whose packages now come from the
npm registry under their original directory names: angular-translate,
ng-file-upload and its shim move under dist/, ng-tags-input's stylesheet
and script move under build/, and angular-ui-ace resolves to its
unminified source, which is the only build that package publishes.

Drop the remaining references to JDK-internal and implementation-private
classes: the e-mail attachment reader now casts the decoded part to
java.io.InputStream, which is all the following byte-array read needs,
and the PDF service names the JDK's built-in Xalan XSLTC transformer in
prose rather than by its internal package.

Round out the LDAP provider properties loader with the module licence
header, a resource path derived from its own package for diagnostics,
validation that neither provider value is missing or blank, and
documentation of why the values are held as data.

Document the Java 17 and Node 20 LTS prerequisites in the README, noting
that no JVM module-access flags are needed to run the application, and
remove the JVM flag that Java 14 deleted from the release pipeline's
MAVEN_OPTS so those jobs can start on Java 17.